--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,9 @@
 /public/storage
 /storage/*.key
 /vendor
-/public/dist
-/public/build
-/public/mix-manifest.json
+# /public/dist
+# /public/build
+# /public/mix-manifest.json
 .env
 .phpunit.result.cache
 Homestead.json
